test/semantics/invalid/p2/WrongNumberOfTypeParameters.java
package invalid.p2;

import java.util.ArrayList;

public class WrongNumberOfTypeParameters {
	{
		ArrayList<String> al = new ArrayList<String, String>();
	}
}
